tests/positive/MarkdownImport/A.juvix
module A;

import B  open;

axiom a : D; 