tests/negative/Internal/WrongReturnType.juvix
module WrongReturnType;

axiom B : Type;

type A :=
  | c : B;

